--- a/src/main/resources/templates/adminDashBoard/fragments/courseTableRowContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/courseTableRowContent.html
@@ -1,7 +1,7 @@
-<div th:fragment="courseTableRowContent">
+<div th:fragment="courseTableRowContent" >
     <tr th:each="course : ${listCourse}">
         <td th:text="${course.courseId}"></td>
-        <td th:text="${course.title}"></td>
+        <td th:text="${course.title}" class="text-bold"></td>
         <td th:text="${course.duration == null ? 'N/A' : course.duration + ' phút'}"></td>
         <td th:text="${course.price != null ? #numbers.formatDecimal(course.price, 0, 'COMMA', 0, 'POINT') : 'N/A'}"></td>
         <td th:text="${course.totalLessons == null ? 'N/A' : course.totalLessons}"></td>
@@ -29,12 +29,13 @@
         <td>
             <div class="d-flex justify-content-center gap-2 w-100">
                 <a th:href="@{/admin/course/detail/{courseId}(courseId=${course.courseId})}"
-                   class="btn btn-info btn-sm w-100" title="View Detail">
+                   class="btn btn-info-soft btn-round me-1 mb-1 mb-md-0"
+                   data-bs-toggle="tooltip" data-bs-placement="top" title="View Detail">
                     <i class="fas fa-eye"></i>
                 </a>
 
                 <a th:href="@{/admin/course/delete/{courseId}(courseId=${course.courseId})}"
-                   class="btn btn-danger btn-sm w-100"
+                   class="btn btn-danger-soft btn-round me-1 mb-1 mb-md-0"
                    onclick="return confirm('Bạn có chắc chắn muốn xóa khóa học này không?')" title="Delete">
                     <i class="fas fa-trash"></i>
                 </a>
