--- a/src/main/resources/templates/loginPage/normalLogin/login.html
+++ b/src/main/resources/templates/loginPage/normalLogin/login.html
@@ -22,6 +22,7 @@
                     <div class="row g-0">
                         <!-- Left side - Decorative Image -->
                         <div class="col-md-6 d-none d-md-block">
+                            <a th:href="@{/home}" class="text-gray text-decoration-none mt-3 ml-3 "><i class="fa-solid fa-arrow-left"></i>Back to home</a>
                             <img src="https://frontends.udemycdn.com/components/auth/desktop-illustration-x1.webp"
                                  alt="Banner Login" class="img-fluid ">
                         </div>
