--- a/src/main/resources/templates/adminDashBoard/fragments/accountContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/accountContent.html
@@ -152,16 +152,15 @@
                             <!-- Admin Tab -->
                             <div class="tab-pane fade show active" id="admin" role="tabpanel">
                                 <div class="table-responsive">
-                                    <table class="table account-table">
+                                    <table class="table account-table text-center">
                                         <thead>
                                         <tr>
                                             <th>ID</th>
-                                            <th>Tên</th>
+                                            <th>UserName</th>
                                             <th>Email</th>
                                             <th>Role</th>
                                             <th>Status</th>
-                                            <th>Thao tác</th>
-                                            <th>Reset Password</th>
+                                            <th>Action</th>
                                         </tr>
                                         </thead>
                                         <tbody id="adminTableBody">
@@ -174,16 +173,15 @@
                             <!-- Instructor Tab -->
                             <div class="tab-pane fade" id="instructor" role="tabpanel">
                                 <div class="table-responsive">
-                                    <table class="table account-table">
+                                    <table class="table account-table text-center">
                                         <thead>
                                         <tr>
                                             <th>ID</th>
-                                            <th>Tên</th>
+                                            <th>UserName</th>
                                             <th>Email</th>
                                             <th>Role</th>
                                             <th>Status</th>
-                                            <th>Thao tác</th>
-                                            <th>Reset Password</th>
+                                            <th>Action</th>
                                         </tr>
                                         </thead>
                                         <tbody id="instructorTableBody">
@@ -196,16 +194,15 @@
                             <!-- User Tab -->
                             <div class="tab-pane fade" id="user" role="tabpanel">
                                 <div class="table-responsive">
-                                    <table class="table account-table">
+                                    <table class="table account-table text-center">
                                         <thead>
                                         <tr>
                                             <th>ID</th>
-                                            <th>Tên</th>
+                                            <th>UserName</th>
                                             <th>Email</th>
                                             <th>Role</th>
                                             <th>Status</th>
-                                            <th>Thao tác</th>
-                                            <th>Reset Password</th>
+                                            <th>Action</th>
                                         </tr>
                                         </thead>
                                         <tbody id="userTableBody">
