--- a/src/main/resources/templates/homePage/home.html
+++ b/src/main/resources/templates/homePage/home.html
@@ -13,6 +13,15 @@
     <link rel="stylesheet" th:href="@{css/styleHome.css}">
 </head>
 <body>
+<!-- Hiển thị thông báo lỗi -->
+<div th:if="${errorMessage}" class="alert alert-danger" role="alert">
+    <span th:text="${errorMessage}"></span>
+</div>
+
+<!-- Hiển thị thông báo thành công -->
+<div th:if="${successMessage}" class="alert alert-success" role="alert">
+    <span th:text="${successMessage}"></span>
+</div>
 <!-- Header/Navigation -->
 <header class="bg-black border-bottom border-dark">
     <div class="container">
@@ -855,5 +864,11 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Custom JS -->
 <script src="js/script.js"></script>
+<script>
+    setTimeout(function () {
+        $('#success-alert').fadeOut('slow');
+        $('#error-alert').fadeOut('slow');
+    }, 3000);
+</script>
 </body>
 </html>
