--- a/src/main/resources/templates/instructorDashboard/fragments/step3CourseContent.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/step3CourseContent.html
@@ -383,7 +383,7 @@
                                                 </div>
                                                 <div class="mb-3">
                                                     <label class="form-label">Duration (minutes)</label>
-                                                    <input type="number" th:field="*{duration}" class="form-control video-duration-input" id="videoDuration" readonly>
+                                                    <input type="number" th:field="*{durationMinutes}" class="form-control video-duration-input" id="videoDuration" readonly>
                                                     <small class="form-text text-muted">Duration will be calculated automatically when you select a video file.</small>
                                                 </div>
                                                 <div class="d-flex justify-content-end">
@@ -1096,7 +1096,7 @@
 
                             <div class="mb-3">
                                 <label class="form-label">Duration (minutes)</label>
-                                <input type="number" class="form-control" name="duration" id="editVideoDuration" readonly>
+                                <input type="number" th:field="*{durationMinutes}" class="form-control video-duration-input" id="videoDuration" readonly>
                             </div>
                         </div>
 
